--- a/Regression_with_deep_mind_understaning.ipynb
+++ b/Regression_with_deep_mind_understaning.ipynb
@@ -13,9 +13,10 @@
         "Ziohtf_sz_25",
         "hlhc3ya0AZCI",
         "uQ9p1_qYBSLX",
-        "rjYPYBtsVmn1"
+        "rjYPYBtsVmn1",
+        "WHNoHMmEeydO"
       ],
-      "authorship_tag": "ABX9TyPqs27iwiegoMjYo0NQ6OnG",
+      "authorship_tag": "ABX9TyOH1LRr9jaMZTrGoWM8Fz7j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +46,9 @@
       "source": [
         "# Chapter 1 \n",
         "* all Regression Allgorithm use \n",
-        "* Quick look theory part\n",
+        "* Quick look theory part  (what, why & how) \n",
+        ", use this [link](https://scikit-learn.org/stable/modules/linear_model.html#polynomial-regression-extending-linear-models-with-basis-functions)\n",
+        "\n",
         "* all Regression Allgorithm use again mind but you know how it work & why.\n",
         "* all Important point cover What, why & how . (pros & coes)\n",
         "## Deep Dive into the Regression  it make you Advance level player in the game.\n",
@@ -98,38 +101,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HvLz7liCLzCr",
-        "outputId": "bdb7203e-9255-478e-d1e6-23a8587807e5"
-      },
-      "source": [
-        "print('hello')"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "hello\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "3Bt2poLmLzr4"
       },
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
         "from sklearn.linear_model import LinearRegression\n",
-        "model = LinearRegression()"
+        "model = LinearRegression(n_jobs=3,copy_X=False)"
       ],
-      "execution_count": 2,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -141,7 +121,7 @@
         "X=np.array([[1,1],[1,2],[2,2],[2,3]])\n",
         "y=np.dot(X,np.array([1,2])) +3        # 1*x_0 + 2*x_1 +3 "
       ],
-      "execution_count": 3,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -150,140 +130,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "SLpmQvTcL0Rp",
-        "outputId": "6be5fd13-1e9f-4bd3-96e3-ce24560a550c"
-      },
-      "source": [
-        "X"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1, 1],\n",
-              "       [1, 2],\n",
-              "       [2, 2],\n",
-              "       [2, 3]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_9JdbgNYL0sb",
-        "outputId": "bb77c9d5-6f41-41d8-b871-4626ea9b89e0"
-      },
-      "source": [
-        "y"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 6,  8,  9, 11])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "T15bY49NQxT_",
-        "outputId": "1aecec25-8bd7-4210-f95f-8cbca831c4b9"
+        "outputId": "3d4ff033-15f0-4f76-bf58-70cc3ea18ada"
       },
       "source": [
         "model.fit(X,y)"
       ],
-      "execution_count": 6,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+              "LinearRegression(copy_X=False, fit_intercept=True, n_jobs=3, normalize=False)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "o9_42suKS6Qo",
-        "outputId": "4c3e4a46-3b79-4cca-b202-b2cc03540e52"
-      },
-      "source": [
-        "model.predict([[6,7]])"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([23.])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "S4gTOaVDTbsj",
-        "outputId": "6a248a78-a2e5-4c83-92df-31452d0bdeef"
-      },
-      "source": [
-        "model.predict([[7,7]])"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([24.])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
+          "execution_count": 40
         }
       ]
     },
@@ -294,12 +159,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qJPgnVCRTpig",
-        "outputId": "d801b5ea-878c-4b66-9d79-cdc7a64f5919"
+        "outputId": "69b92f7f-b9c7-4e5b-b610-e8fca492af4c"
       },
       "source": [
         "model.coef_"
       ],
-      "execution_count": 9,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +176,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 41
         }
       ]
     },
@@ -322,12 +187,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bjt0b_UsT7QG",
-        "outputId": "9a727b6d-9ec3-4284-a01b-760d7df8da78"
+        "outputId": "bc8b8ad6-b7f5-4258-f882-c4a903c85dda"
       },
       "source": [
         "model.intercept_"
       ],
-      "execution_count": 10,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +204,47 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cLn2qUkYKkQ_"
+      },
+      "source": [
+        "X_test=np.array([[3,3],[3,4],[4,4],[4,5]])\n",
+        "y_test=np.dot(X_test,np.array([1,2])) + 3"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qPXrf5G1K--X",
+        "outputId": "88ead22b-0473-4245-ad20-7e71f42bb1e9"
+      },
+      "source": [
+        "y_test"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([12, 14, 15, 17])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
         }
       ]
     },
@@ -350,12 +255,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z5furll_T9Sy",
-        "outputId": "fa1612ce-83fd-4ad8-8eac-555c6eebeb3d"
+        "outputId": "8a7c63de-88e5-4126-b5eb-3a412396bc73"
       },
       "source": [
         "model.score(X,y)"
       ],
-      "execution_count": 11,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +272,83 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2XVrM3GqLJit"
+      },
+      "source": [
+        "y_estimat =model.predict(X_test)"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1yd564UIMpsG"
+      },
+      "source": [
+        "correlation of X & Y "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "McXO0bCeLSJG",
+        "outputId": "1ae29990-9460-4315-9f6a-a35897d55016"
+      },
+      "source": [
+        "model.score(X_test,y_test)         # score say X , Y relationship is good if 1 or negative values is bed relationship."
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2I4dOpr8Lxkf",
+        "outputId": "471f8ca9-43a6-47b8-e8df-853c66b96494"
+      },
+      "source": [
+        "y_estimat"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([12., 14., 15., 17.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
         }
       ]
     },
@@ -378,26 +359,115 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gMOCts5lUQAf",
-        "outputId": "6446b95d-0fc1-4d15-a9d7-b87e45c8e4e7"
+        "outputId": "775b70ca-695a-49d6-dd55-1e89f3f1ba49"
       },
       "source": [
         "model.get_params()"
       ],
-      "execution_count": 12,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'copy_X': True, 'fit_intercept': True, 'n_jobs': None, 'normalize': False}"
+              "{'copy_X': False, 'fit_intercept': True, 'n_jobs': 3, 'normalize': False}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 49
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zLMKb3WjOFF4"
+      },
+      "source": [
+        "above=((y_test - y_estimat) ** 2).sum() "
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OacY9lNnOYMu"
+      },
+      "source": [
+        "blow=((y_test - y_test.mean()) ** 2).sum()"
+      ],
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oL5loJ4GOkwy",
+        "outputId": "9673a0ea-d6ef-45aa-ef8c-e50c73d03484"
+      },
+      "source": [
+        "1-(above/blow)"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "deTof4NzOuTL",
+        "outputId": "15175dbb-1382-4847-c26d-d8303c69ddbe"
+      },
+      "source": [
+        "above/blow"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.854528647513919e-31"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mqe4Be3HPQG9"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 53,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -420,7 +490,7 @@
       "source": [
         "model.intercept_+(model.coef_*X**2)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +517,7 @@
       "source": [
         "from sklearn.preprocessing import PolynomialFeatures"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -458,7 +528,7 @@
       "source": [
         "poly=PolynomialFeatures(degree=1)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -473,7 +543,7 @@
       "source": [
         "poly.fit(X)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +572,7 @@
       "source": [
         "poly.fit_transform(X)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +603,7 @@
       "source": [
         "X"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -560,7 +630,7 @@
       "source": [
         ""
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -571,7 +641,7 @@
       "source": [
         ""
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -591,7 +661,7 @@
       "source": [
         "from sklearn.datasets import load_iris"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -602,7 +672,7 @@
       "source": [
         "X,y=load_iris(return_X_y=True)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,7 +683,7 @@
       "source": [
         "from sklearn.linear_model import LogisticRegression"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -624,7 +694,7 @@
       "source": [
         "model1=LogisticRegression()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +709,7 @@
       "source": [
         "X.size"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +738,7 @@
       "source": [
         "model1.fit(X[0:100,np.newaxis],y[0:100])"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -736,7 +806,7 @@
         "    \n",
         "get_stats()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,7 +872,7 @@
         "from sklearn.linear_model import Ridge\n",
         "model3=Ridge()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -831,7 +901,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +930,7 @@
       "source": [
         "clf.predict(X)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -889,7 +959,7 @@
       "source": [
         "y"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -938,7 +1008,7 @@
       "source": [
         "print('helo')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -958,7 +1028,7 @@
         "from sklearn.linear_model import ElasticNet\n",
         "from sklearn.datasets import make_regression"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -969,7 +1039,7 @@
       "source": [
         "X,y=make_regression(n_features=2,random_state=42)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -984,7 +1054,7 @@
       "source": [
         "X.shape"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1012,7 +1082,7 @@
       "source": [
         "y.shape"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1036,7 +1106,7 @@
       "source": [
         "regr=ElasticNet(random_state=41)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1051,7 +1121,7 @@
       "source": [
         "regr.fit(X,y)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1070,9 +1140,40 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "WHNoHMmEeydO"
+      },
+      "source": [
+        "# Now next level"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O9eK5uprnh8-"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V9ivpfElniVY"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wMS7BdU8njJJ"
       },
       "source": [
         ""
